laborations/lab1/testsuite/good/synthetic030.cc
int main() {
	int x = 1;
	do { } while (x == 4);
}
