laborations/lab1/testsuite/bad/bad129.cc
int main () {
	do {int x = 1; } (int x;)
}
